application/nginx_yaml_files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-info
  labels:
    app: pod-info
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pod-info
  template:
    metadata:
      labels:
        app: pod-info
    spec:
      containers:
      - name: pod-info
        image: kimschles/pod-info-app:0.0.5
        ports:
        - containerPort: 3000
