application/nginx_yaml_files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-info-service
  labels:
    app: pod-info
spec:
  selector:
    app: pod-info
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
